# email-inbound-webhook

./: .env.exmpale  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: 20210422050803_init.sql
src/: main.rs
src/email/: mod.rs  model.rs  sql.rs
src/libs/: config.rs  ctx.rs  mod.rs  multipart.rs  prelude.rs
src/routes/: emails.rs  mod.rs  sendgrid_webhook.rs
