[package]
name = "email-inbound-webhook"
version = "0.1.0"
authors = ["Yanmin <shaoyan.alpha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "email-inbound-webhook"
path = "src/main.rs"

[dependencies]
tide = { version = "0.16.0", default-features = false, features = ["h1-server", "cookies", "sessions"] }
async-std = { version = "1.6.0", features = ["attributes"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.8.2"
serde = "1.0.117"
serde_urlencoded = "0.7.0"
serde_json = "1.0.59"
sqlx = { version = "0.5.2", features = ["sqlite", "runtime-async-std-native-tls", "migrate", "offline"] }
thiserror = "1.0"
dotenv = "0.15.0"
time = "0.2.22"
http-types = "2.7.0"
futures = "0.3.8"
regex = "1.4.2"
formdata = "0.13.0"
hyper = { version = "0.10" }
chrono = "0.4.19"
lazy_static = "1.4.0"
clap = "2.33.3"
